# SDL2_gfx-cmake

./: .gitignore  CMakeLists.txt
CMake/: add_lib.cmake  user_defined_settings.cmake
src/: CMakeLists.txt
